headerのカテゴリにもリンクを設定

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -73,6 +73,7 @@
             top: 44px;
             z-index: 1000;
             background: #fff;
+            height: 572px;
             .bigcategory-element{
               display: none;
               width: 224px;
@@ -91,6 +92,7 @@
                 bottom: 0;
                 box-shadow: 1px 0 0 0 #eee inset;
                 background: #fff;
+                height: 572px;
                 .middlecategory-element{
                   cursor: pointer;
                   width: 224px;
@@ -105,6 +107,7 @@
                     bottom: 0px;
                     box-shadow: 1px 0 0 0 #eee inset;
                     background: #fff;
+                    height: 572px;
                     .smallcategory-element{
                       width: 320px;
                       cursor: pointer;
