--- a/app/views/top/_header_category1.html.haml
+++ b/app/views/top/_header_category1.html.haml
@@ -1,2 +1,2 @@
 %li.bigcategory-element{data: {id: "#{big_category.id}"}}
-  = link_to big_category.name,"/"
+  = link_to big_category.name,top_path(big_category.id)
