--- a/app/views/top/show.html.haml
+++ b/app/views/top/show.html.haml
@@ -7,7 +7,10 @@
         = render partial:"category-list", collection: @categories, as: :category 
       .contents__all-items-category
         %h2.contents__all-items__head-caterory
-          =@category.name + "の商品一覧(" + @page + "ページ目)"
+          - if @page == nil
+            =@category.name
+          - else
+            =@category.name + "の商品一覧(" + @page + "ページ目)"
         .contents__items-category
           = render partial: "products/item", collection: @products, as: :product
       = paginate @products, window:2
