--- a/app/assets/stylesheets/products/listing.scss
+++ b/app/assets/stylesheets/products/listing.scss
@@ -53,15 +53,19 @@
         #preview{
           display: flex;
           flex-direction: row;
+          flex-wrap: wrap;
+          align-content: space-between;
           box-sizing: border-box;
           padding: 0 10px 10px 0;
+          width: 570px;
         }
         &__preview{
           width: 620px;
           height: 172px;
           cursor: pointer;
           background: #f5f5f5;
-          border: 1px dashed #ccc
+          border: 1px dashed #ccc;
+          margin: 0 0 10px 10px;
         }
         #preview2{
           display: flex;
