--- a/app/assets/stylesheets/products/listing.scss
+++ b/app/assets/stylesheets/products/listing.scss
@@ -51,30 +51,40 @@
         flex-direction: row;
         flex-wrap: wrap;
         #preview{
-          display: flex;
-          flex-direction: row;
           box-sizing: border-box;
           padding: 0 10px 10px 0;
+          position: relative;
+        }
+        .images-lists-box{
+          display: flex;
+          flex-wrap: wrap;
+          align-content: space-between;
+          width: 620px;
         }
         &__preview{
-          width: 620px;
-          height: 172px;
-          cursor: pointer;
-          background: #f5f5f5;
-          border: 1px dashed #ccc
-        }
-        #preview2{
-          display: flex;
-          flex-direction: row;
-          padding: 0 10px 10px 0;
-        }
-        &__preview2{
-          width: 590px;
+          width: 570px;
           height: 172px;
           cursor: pointer;
           background: #f5f5f5;
           border: 1px dashed #ccc;
+          margin: 0 0 10px 10px;
+          position: absolute;
+          bottom: 0;
+          right: 60px;
+          display: none;
         }
+        // #preview2{
+        //   display: flex;
+        //   flex-direction: row;
+        //   padding: 0 10px 10px 0;
+        // }
+        // &__preview2{
+        //   width: 590px;
+        //   height: 172px;
+        //   cursor: pointer;
+        //   background: #f5f5f5;
+        //   border: 1px dashed #ccc;
+        // }
         
         .listing-image-container{
           list-style: none;
@@ -364,3 +374,4 @@
 .listing__form__upload__box__preview2{
   display: none;
 }
+
