--- a/app/views/shared/_listing-form.html.haml
+++ b/app/views/shared/_listing-form.html.haml
@@ -14,25 +14,29 @@
 
       .listing__form__upload__box
         #preview
-          %label.listing__form__upload__box__preview
-            -if @product.images.attached?
+          -if @product.images.attached?
+            .images-lists-box
               - @product.images.each do |image|
-                = f.file_field :images, class:'listing-upload-drop-file',multiple:true
                 %ul.listing-image-container
                   %li.image-box
                     = image_tag image
                   .button
                     %a.edit 編集
                     %a.delete 削除
-
-                -# %label.listing__form__upload__box__preview
-                -#   = f.file_field :images, class:'listing-upload-drop-file', multiple:true
-                -# %label.listing__form__upload__box__preview
-                -#   = f.file_field :images, class:'listing-upload-drop-file', multiple:true
-                -# %label.listing__form__upload__box__preview
-                -#   = f.file_field :images, class:'listing-upload-drop-file', multiple:true
-                -# %label.listing__form__upload__box__preview
-                -#   = f.file_field :images, class:'listing-upload-drop-file', multiple:true
+            - (0..10).each do |e|
+              %label.listing__form__upload__box__preview{style:"width:#{@input_length}px"}
+                = f.file_field :images, class:'listing-upload-drop-file',multiple:true
+          -else
+            %label.listing__form__upload__box__preview
+              = f.file_field :images, class:'listing-upload-drop-file',multiple:true
+              -# %label.listing__form__upload__box__preview
+              -#   = f.file_field :images, class:'listing-upload-drop-file', multiple:true
+              -# %label.listing__form__upload__box__preview
+              -#   = f.file_field :images, class:'listing-upload-drop-file', multiple:true
+              -# %label.listing__form__upload__box__preview
+              -#   = f.file_field :images, class:'listing-upload-drop-file', multiple:true
+              -# %label.listing__form__upload__box__preview
+              -#   = f.file_field :images, class:'listing-upload-drop-file', multiple:true
 
               -# #preview2
               -#   %label.listing__form__upload__box__preview2
@@ -47,30 +51,27 @@
               -#     = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
 
 
-            -else
-              #preview
-                %label.listing__form__upload__box__preview
-                  = f.file_field :images, class:'listing-upload-drop-file',multiple:true
-                %label.listing__form__upload__box__preview{style:"display:none;"}
-                  = f.file_field :images, class:'listing-upload-drop-file', multiple:true
-                %label.listing__form__upload__box__preview{style:"display:none;"}
-                  = f.file_field :images, class:'listing-upload-drop-file', multiple:true
-                %label.listing__form__upload__box__preview{style:"display:none;"}
-                  = f.file_field :images, class:'listing-upload-drop-file', multiple:true
-                %label.listing__form__upload__box__preview{style:"display:none;"}
-                  = f.file_field :images, class:'listing-upload-drop-file', multiple:true
 
-              #preview2
-                %label.listing__form__upload__box__preview2
-                  = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
-                %label.listing__form__upload__box__preview2
-                  = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
-                %label.listing__form__upload__box__preview2
-                  = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
-                %label.listing__form__upload__box__preview2
-                  = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
-                %label.listing__form__upload__box__preview2
-                  = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
+          -#     %label.listing__form__upload__box__preview{style:"display:none;"}
+          -#       = f.file_field :images, class:'listing-upload-drop-file', multiple:true
+          -#     %label.listing__form__upload__box__preview{style:"display:none;"}
+          -#       = f.file_field :images, class:'listing-upload-drop-file', multiple:true
+          -#     %label.listing__form__upload__box__preview{style:"display:none;"}
+          -#       = f.file_field :images, class:'listing-upload-drop-file', multiple:true
+          -#     %label.listing__form__upload__box__preview{style:"display:none;"}
+          -#       = f.file_field :images, class:'listing-upload-drop-file', multiple:true
+
+          -#   #preview2
+          -#     %label.listing__form__upload__box__preview2
+          -#       = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
+          -#     %label.listing__form__upload__box__preview2
+          -#       = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
+          -#     %label.listing__form__upload__box__preview2
+          -#       = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
+          -#     %label.listing__form__upload__box__preview2
+          -#       = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
+          -#     %label.listing__form__upload__box__preview2
+          -#       = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
 
     .listing__form__product
       .listing__form__product__form-group
@@ -167,7 +168,6 @@
             発送元の地域
           %span.listing__form__delivery__box__form-group__require
             必須
-          
           = f.collection_select :prefecture_id, Prefecture.all, :id, :name, {prompt: "---"}, {class: 'listing__form__delivery__box__form-group__category-select'}
 
         .listing__form__delivery__box__form-group
