--- a/app/views/products/status.html.haml
+++ b/app/views/products/status.html.haml
@@ -9,12 +9,12 @@
           -if @product.images.attached?
             -@product.images.each do |image|
               %li.item-detail__image__slider
-                = image_tag image, alt: '', height: 'auto', width: '270px'
+                = image_tag image, height: 'auto', width: '270px'
         %ul.item-detail__image__thumbnails
           -if @product.images.attached?
             -@product.images.each do |image|
               %li.item-detail__image__thumbnail
-                = image_tag image, alt: '', height: '60px', width: '60px'
+                = image_tag image, height: '60px', width: '60px'
       .item-detail__table
         %table
           %tr
@@ -78,26 +78,17 @@
         (税込)
       .item-detail__shipping_cost
         送料込み
-    .item-detail__purchase-button
-      = link_to '購入画面に進む', "/"
     .item-detail__comment
       = @product.description
-    .item-detail__like-bad-other
-      .item-detail__like
-        %i.far.fa-heart
-        %span いいね！
-        %span
-        - if @product.like.present?
-          @product.like.like
-      .item-detail__bad
-        %i.far.fa-flag
-        %span 不適切な商品の報告
-        %span
-        - if @product.like.present?
-          @product.like.bad
-      .item-detail__other
-        %i.fas.fa-lock
-        = link_to 'あんしん・あんぜんへの取り組み','/'
+    .item-detail__status
+      .item-detail__status__edit-button.red
+        = link_to '商品の編集', edit_product_path
+      .item-detail__status__other
+        or
+      .item-detail__status__edit-button.gray
+        = link_to '出品を一旦停止する', "/"
+      .item-detail__status__edit-button.gray
+        = link_to 'この商品を削除する', product_path, method: :delete
     .item-detail__comment
       .item-detail__comment__box
         - @comments.each do |comment|
@@ -121,3 +112,4 @@
         = form_with(model: [ @product, Comment.new ]) do |form|
           = form.text_area :text, class: :'item-detail__comment__form'
           = form.submit value: "コメントする", class: :'item-detail__comment__form__button'
+= render './top/footer'
