--- a/app/assets/stylesheets/top/_content.scss
+++ b/app/assets/stylesheets/top/_content.scss
@@ -14,8 +14,8 @@
     &__items {
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
       margin: 0 auto;
+      width: 940px;
     }
     &__item__box {
       width: 212px;
@@ -23,8 +23,10 @@
       margin: 10px 10px;
       background-color: #fff;
       &__image {
-        width: 213px;
-        height: 213px;
+        img {
+          width: 213px;
+          height: 213px;
+        }
       }
       &__item-name {
         position: relative;
@@ -63,7 +65,7 @@
         margin: 0 auto;
       }
     .gray {
-       color: #ccc;
+      color: #ccc;
     }
     }
 }
@@ -123,20 +125,6 @@
           opacity: 1;
         }
       }
-      &:before {
-        position: absolute;
-        top: 0;
-        left: 0;
-        content:"";
-        width: 20px;
-        height: 20px;
-        font-size: 6px;
-        line-height: 20px;
-        text-align: center;
-        color: white;
-        opacity: 0.25;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
       }
     }
     &.slick-active button:before {
