--- a/app/views/users/_mypagesidebar2.html.haml
+++ b/app/views/users/_mypagesidebar2.html.haml
@@ -1,4 +1,4 @@
--# %li.mypage-nav-list-item.avtive
--#   =link_to(mypagesidebar2[:name],mypagesidebar2[:link])
--#   %i.fas.fa-chevron-right
 
+%li.mypage-nav-list-itemavtive
+  =link_to(mypagesidebar2,'/users',)
+  %i.fas.fa-chevron-right
