--- a/app/views/signup/index.html.haml
+++ b/app/views/signup/index.html.haml
@@ -6,14 +6,16 @@
       %h2.signup-box-head 新規会員登録
       .signup
         .signup__email
-          = link_to "#", class: "btn-default btn-mail" do
+          = link_to new_user_registration_path, class: "btn-default btn-mail" do
             メールアドレスで登録する
             %i.far.fa-envelope
         .signup__social
-          %button#facebook-login.btn-default.btn-sns-facebook
-            Facebookで登録する
-            %i.fab.fa-facebook-square
-          %button#google-login.btn-default.btn-sns-google Googleで登録する
+          = link_to user_facebook_omniauth_authorize_path, method: :post do
+            %button#facebook-login.btn-default.btn-sns-facebook
+              Facebookで登録する
+              %i.fab.fa-facebook-square
+          = link_to user_google_oauth2_omniauth_authorize_path, method: :post do
+            %button#google-login.btn-default.btn-sns-google Googleで登録する
 
   %footer.registration_login-footer.test
     = render "registration_login_footer"
