--- a/app/views/products/status.html.haml
+++ b/app/views/products/status.html.haml
@@ -35,10 +35,10 @@
             %th カテゴリー
             %td
               .item-detail__table__category
-                = link_to @grand_child_category.name, '/'
+                = link_to @product.category.parent.grandparent.name, '/'
               .item-detail__table__category
                 %i.fas.fa-angle-right
-                = link_to @child_category.name, '/'
+                = link_to @product.category.parent.name, '/'
               .item-detail__table__category
                 %i.fas.fa-angle-right
                 = link_to @product.category.name, '/'
