商品編集時にupdateアクションに飛ぶように記述。

--- a/app/assets/stylesheets/mixin.scss
+++ b/app/assets/stylesheets/mixin.scss
@@ -69,6 +69,10 @@
     background: #aaa;
     border: 1px solid #aaa;
     color: #fff;
+    a{
+      color: #fff;
+      display: block;
+    }
   }
   .btn-gray:hover {
     opacity: 0.8;
