--- a/app/views/shared/_new-button.html.haml
+++ b/app/views/shared/_new-button.html.haml
@@ -16,5 +16,5 @@
         に同意したことになります。
 
       =f.submit "出品する", class: 'btn-default btn-red'
-      %button.btn-default.btn-gray
+      %button.btn-default.btn-gray{type:'button'}
         =link_to "もどる", root_path
