--- a/app/views/shared/_listing-form.html.haml
+++ b/app/views/shared/_listing-form.html.haml
@@ -16,62 +16,21 @@
         #preview
           -if @product.images.attached?
             .images-lists-box
-              - @product.images.each do |image|
+              -@product.images.all.order(id: "ASC").each do |image|
                 %ul.listing-image-container
                   %li.image-box
                     = image_tag image
                   .button
                     %a.edit 編集
                     %a.delete 削除
-            - (0..10).each do |e|
-              %label.listing__form__upload__box__preview{style:"width:#{@input_length}px"}
-                = f.file_field :images, class:'listing-upload-drop-file',multiple:true
+            - (0..10).each do
+              %label.listing__form__upload__box__preview
+                = f.file_field :images, class:'listing-upload-drop-file', multiple:true
           -else
-            %label.listing__form__upload__box__preview
-              = f.file_field :images, class:'listing-upload-drop-file',multiple:true
-              -# %label.listing__form__upload__box__preview
-              -#   = f.file_field :images, class:'listing-upload-drop-file', multiple:true
-              -# %label.listing__form__upload__box__preview
-              -#   = f.file_field :images, class:'listing-upload-drop-file', multiple:true
-              -# %label.listing__form__upload__box__preview
-              -#   = f.file_field :images, class:'listing-upload-drop-file', multiple:true
-              -# %label.listing__form__upload__box__preview
-              -#   = f.file_field :images, class:'listing-upload-drop-file', multiple:true
-
-              -# #preview2
-              -#   %label.listing__form__upload__box__preview2
-              -#     = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
-              -#   %label.listing__form__upload__box__preview2
-              -#     = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
-              -#   %label.listing__form__upload__box__preview2
-              -#     = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
-              -#   %label.listing__form__upload__box__preview2
-              -#     = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
-              -#   %label.listing__form__upload__box__preview2
-              -#     = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
-
-
-
-          -#     %label.listing__form__upload__box__preview{style:"display:none;"}
-          -#       = f.file_field :images, class:'listing-upload-drop-file', multiple:true
-          -#     %label.listing__form__upload__box__preview{style:"display:none;"}
-          -#       = f.file_field :images, class:'listing-upload-drop-file', multiple:true
-          -#     %label.listing__form__upload__box__preview{style:"display:none;"}
-          -#       = f.file_field :images, class:'listing-upload-drop-file', multiple:true
-          -#     %label.listing__form__upload__box__preview{style:"display:none;"}
-          -#       = f.file_field :images, class:'listing-upload-drop-file', multiple:true
-
-          -#   #preview2
-          -#     %label.listing__form__upload__box__preview2
-          -#       = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
-          -#     %label.listing__form__upload__box__preview2
-          -#       = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
-          -#     %label.listing__form__upload__box__preview2
-          -#       = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
-          -#     %label.listing__form__upload__box__preview2
-          -#       = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
-          -#     %label.listing__form__upload__box__preview2
-          -#       = f.file_field :images, class:'listing-upload-drop-file2', multiple:true
+            .images-lists-box
+            - (0..10).each do
+              %label.listing__form__upload__box__preview
+                = f.file_field :images, class:'listing-upload-drop-file', multiple:true
 
     .listing__form__product
       .listing__form__product__form-group
