--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -38,17 +38,15 @@
           color: rgb(255,255,255);
           border-top-right-radius: 4px;
           border-bottom-right-radius: 4px;
-          z-index: 1;
-          input{
-            position: absolute;
-            right: 0;
-            height: 40px;
-            width: 40px;
-            background: rgb(102, 102, 102);
-            color: rgb(102, 102, 102);
-            z-index: -1;
-            cursor: pointer;
-          }
+        }
+        .search-button{
+          position: absolute;
+          right: 0;
+          height: 40px;
+          width: 40px;
+          border: none;
+          opacity: 0;
+          cursor: pointer;
         }
       }
     }
