--- a/app/assets/stylesheets/products/listing.scss
+++ b/app/assets/stylesheets/products/listing.scss
@@ -104,6 +104,7 @@
           .button{
             display: flex;
             justify-content: space-around;
+            cursor: pointer;
             a{
               border-left: 1px solid #eee;
               display: inline-block;
