--- a/app/views/products/search.html.haml
+++ b/app/views/products/search.html.haml
@@ -8,40 +8,40 @@
         %h3.search__form__title 詳細検索
         .input-form-box
           %label キーワードを追加する
-          = f.text_field  :name,class:'input__form__group__input', value:@keyword
+          = f.text_field  :name_cont,class:'input__form__group__input', value:@keyword
         .input-form-box
           %label カテゴリーを選択する
           = f.collection_select :category_id, Category.all.take(13), :id, :name, {prompt: "すべて"},class:'listing__form__detail__box__form-group__category-select',id: 'big-category'
         - (1...14).each do |e|
           .listing__form__detail__box__form-group-search.middle-category{style: 'display:none;'}
-            = f.collection_select :category_id0,Category.find(e).children, :id, :name, {prompt: "---", selected: @middlecategoryid}, class: 'listing__form__detail__box__form-group__category-select'
+            = f.collection_select :category_id,Category.find(e).children, :id, :name, {prompt: "---", selected: @middlecategoryid}, class: 'listing__form__detail__box__form-group__category-select'
         - (14...159).each do |g|
           .listing__form__detail__box__form-group-search.small-category{style: 'display:none;'}
             = f.collection_select :category_id, Category.find(g).grandchildren, :id, :name, {prompt: "---"}, class: 'listing__form__detail__box__form-group__category-select'
-          = f.hidden_field :category_grandparent_id, id:"input_category_grandparent"
-          = f.hidden_field :category_parent_id,id:"input_category_parent"
-          = f.hidden_field :category_id,id:"input_category"
+        = f.hidden_field :category_grandparent_id_eq, id:"input_category_grandparent"
+        = f.hidden_field :category_parent_id_eq,id:"input_category_parent"
+        = f.hidden_field :category_id_eq,id:"input_category"
         .input-form-box
           %label ブランド名から探す
-          = f.text_field  :name,class:'input__form__group__input', placeholder:'例)シャネル'
+          = f.text_field  :brand_cont,class:'input__form__group__input', placeholder:'例)シャネル'
         .input-form-box
           %label サイズを指定する
-          = f.collection_select :size_id, Size.all, :id, :name, {prompt: "すべて"},class:'listing__form__detail__box__form-group__category-select'
+          = f.collection_select :size_id_eq, Size.all, :id, :name, {prompt: "すべて"},class:'listing__form__detail__box__form-group__category-select'
         .input-form-box
           %label 価格を指定する
-          = f.collection_select :price, Price.all, :id, :name, {prompt: "---"},class:'listing__form__detail__box__form-group__category-select'
-          = f.text_field :price,class:'input__form__group__input-small'
+          = collection_select :price, :select, Price.all, :id, :name, {prompt: "---"},class:'listing__form__detail__box__form-group__category-select'
+          = f.text_field :price_gteq,class:'input__form__group__input-small'
           %span.spacer ~
-          = f.text_field :price,class:'input__form__group__input-small'
+          = f.text_field :price_lteq,class:'input__form__group__input-small'
         .input-form-box
           %label 商品の状態を指定する
-          = f.collection_select :status_id, Status.all, :id, :name, {prompt: "すべて"},class:'listing__form__detail__box__form-group__category-select'
+          = f.collection_select :status_id_eq, Status.all, :id, :name, {prompt: "すべて"},class:'listing__form__detail__box__form-group__category-select'
         .input-form-box
           %label 配送料の負担
-          = f.collection_select :shipping_fee_id, ShippingFee.all, :id, :name, {prompt: "すべて"},class:'listing__form__detail__box__form-group__category-select'
+          = f.collection_select :shipping_fee_id_eq, ShippingFee.all, :id, :name, {prompt: "すべて"},class:'listing__form__detail__box__form-group__category-select'
         .input-form-box
           %label 販売状況
-          = f.collection_select :purchase_status_id, PurchaseStatus.all, :id, :name, {prompt: "すべて"},class:'listing__form__detail__box__form-group__category-select'          
+          = f.collection_select :purchase_status_id_eq, PurchaseStatus.all, :id, :name, {prompt: "すべて"},class:'listing__form__detail__box__form-group__category-select'          
         .input-form-box-search
           %button.btn-default.btn-gray クリア
           =f.submit "完了", class: 'btn-default btn-red'
