--- a/app/assets/stylesheets/users/status.scss
+++ b/app/assets/stylesheets/users/status.scss
@@ -58,8 +58,11 @@
 
         &__detail{
           margin: 0 40px 0 20px;
-          &__name{
-          }
+        }
+        &__click{
+          position: absolute;
+          line-height: 51px;
+          right: 250px;
         }
       }
     }
