--- a/app/assets/stylesheets/users/status.scss
+++ b/app/assets/stylesheets/users/status.scss
@@ -64,25 +64,17 @@
           right: 250px;
         }
       }
-    }
-    &__list{
-      width: 700px;
-      height: 75px;
-      list-style: none;
-      &__ele {
-        background: #fff;
-        width: 33.3%;
-        text-align: center;
-        line-height: 75px;
-        vertical-align: top;
-        height: 75px;
-        float: left;
-        &__link {
-          text-decoration: none;
-          color: black;
-        }
+      &__trading{
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        font-size: 16px;
+        color: #ccc;
       }
     }
+
   }
 }
 .status-tag{
@@ -94,3 +86,4 @@
   font-size: 12px;
   color: #fff;
 }
+
