検索の並び替えを実装

--- a/app/assets/stylesheets/products/search.scss
+++ b/app/assets/stylesheets/products/search.scss
@@ -8,39 +8,43 @@
 .search__sidebar{
   width: 280px;
   margin: 40px 40px 40px 0;
-  .order-select{
-    @include category-select;
-    background: #fff;
-    margin: 0;
-  }
   .search__form{
     background: #fff;
-    padding: 16px;
-    margin: 40px 0 0;
-    &__title{
-      font-size: 16px;
-      font-weight: bold;
+    .order-select{
+      @include category-select;
+      background: #fff;
+      margin: 0 0 40px 0;
     }
-    .listing__form__detail__box__form-group-search{
-      @include listing-sub-title;
-    }
-    .spacer{
-      display: inline-block;
-      text-align: center;
-      width: 6.5%;
-    }
-    .input__form__group__input-small{
-      width: 45%;
-    }
-    .input-form-box-search{
-      @include listing-btn;
-      display: flex;
-      justify-content: space-between;
-      .btn-gray{
-        margin: auto;
+    .search-box{
+      padding: 16px;
+      .input-form-box:nth-child(2){
+        margin-top: 24px ;
       }
-      .btn-red{
+      h3{
+        font-size: 16px;
+        font-weight: bold;
+      }
+      .listing__form__detail__box__form-group-search{
+        @include listing-sub-title;
+      }
+      .spacer{
+        display: inline-block;
+        text-align: center;
+        width: 6.5%;
+      }
+      .input__form__group__input-small{
         width: 45%;
+      }
+      .input-form-box-search{
+        @include listing-btn;
+        display: flex;
+        justify-content: space-between;
+        .btn-gray{
+          margin: auto;
+        }
+        .btn-red{
+          width: 45%;
+        }
       }
     }
   }
@@ -72,3 +76,5 @@
     }
   }
 }
+
+
