--- a/app/assets/stylesheets/top/_search_category.scss
+++ b/app/assets/stylesheets/top/_search_category.scss
@@ -72,6 +72,7 @@
   margin: 0 auto;
     &__box{
       display: flex;
+      justify-content: center;
       &__cell{
         display: inline-block;
         width: 44px;
