--- a/app/views/top/_header.html.haml
+++ b/app/views/top/_header.html.haml
@@ -3,7 +3,7 @@
     .header-top
       = link_to root_path do
         = image_tag "logo.svg", class:"header-top__logo"
-      = search_form_for @q, url:search_path, class:'header-top__search-box' do |f|
+      = search_form_for @q, url: search_products_path, class:'header-top__search-box' do |f|
         = f.text_field :name_cont, class:'header-top__search-box__input-box',placeholder: "何かお探しですか？"
         %i.fa.fa-search
         = f.submit class:'search-button'
