購入のパス整備

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -79,7 +79,7 @@
       .item-detail__shipping_cost
         送料込み
     .item-detail__purchase-button
-      = link_to '購入画面に進む', "/"
+      = link_to '購入画面に進む',  new_product_purchase_path(@product.id)
     .item-detail__comment
       = @product.description
     .item-detail__like-bad-other
