--- a/app/views/top/_header.html.haml
+++ b/app/views/top/_header.html.haml
@@ -46,38 +46,39 @@
             %span やることリスト
           %ul.header-bottom__user-menu__todolist__content
             %li.header-bottom__user-menu__todolist__content__view  現在やることはありません
-        %li.header-bottom__user-menu__mypage
-          =link_to users_path, class:'header-bottom__user-menu__mypage__icon' do
-            =image_tag "member_photo_noimage_thumb.png"
-            %span マイページ
-          .header-bottom__user-menu__mypage__box
-            .header-bottom__user-menu__mypage__box__status
-              %figure.header-bottom__user-menu__mypage__box__status__user-icon
-                %div
-                  = image_tag "member_photo_noimage_thumb.png"
-                %figucaption ユーザー名
-              %ul.header-bottom__user-menu__mypage__box__status__reviewlist
-                %li.user_status
-                  = link_to "評価:0", "/"
-                %li.user_status
-                  = link_to "出品数:0", "/" 
-              %ul.header-bottom__user-menu__mypage__box__status__salespoint
-                %li.user_status
-                  %a
-                    .l-left 売上金
-                    .l-right 
-                      = "0"
-                      %i.fa.fa-arrow-right
-                %li.user_status
-                  %a
-                    .l-left ポイント
-                    .l-right 
-                      = "0"
-                      %i.fa.fa-arrow-right
-            %ul.header-bottom__user-menu__mypage__box__nav
-              = render partial:'top/header_usermenu_card', locals:{card:"いいね一覧"}
-              = render partial:'top/header_usermenu_card', locals:{card:"出品した商品-出品中"}
-              = render partial:'top/header_usermenu_card', locals:{card:"出品した商品-取引中"}
-              = render partial:'top/header_usermenu_card', locals:{card:"出品した商品-売却済"}
-              = render partial:'top/header_usermenu_card', locals:{card:"購入した商品-取引中"}
-              = render partial:'top/header_usermenu_card', locals:{card:"出品した商品-過去の取引"}
+        - if user_signed_in?
+          %li.header-bottom__user-menu__mypage
+            =link_to users_path, class:'header-bottom__user-menu__mypage__icon' do
+              =image_tag "member_photo_noimage_thumb.png"
+              %span マイページ
+            .header-bottom__user-menu__mypage__box
+              .header-bottom__user-menu__mypage__box__status
+                %figure.header-bottom__user-menu__mypage__box__status__user-icon
+                  %div
+                    = image_tag "member_photo_noimage_thumb.png"
+                  %figucaption #{current_user.nickname}
+                %ul.header-bottom__user-menu__mypage__box__status__reviewlist
+                  %li.user_status
+                    = link_to "評価:0", "/"
+                  %li.user_status
+                    = link_to "出品数:0", "/" 
+                %ul.header-bottom__user-menu__mypage__box__status__salespoint
+                  %li.user_status
+                    %a
+                      .l-left 売上金
+                      .l-right 
+                        = "0"
+                        %i.fa.fa-arrow-right
+                  %li.user_status
+                    %a
+                      .l-left ポイント
+                      .l-right 
+                        = "0"
+                        %i.fa.fa-arrow-right
+              %ul.header-bottom__user-menu__mypage__box__nav
+                = render partial:'top/header_usermenu_card', locals:{card:"いいね一覧"}
+                = render partial:'top/header_usermenu_card', locals:{card:"出品した商品-出品中"}
+                = render partial:'top/header_usermenu_card', locals:{card:"出品した商品-取引中"}
+                = render partial:'top/header_usermenu_card', locals:{card:"出品した商品-売却済"}
+                = render partial:'top/header_usermenu_card', locals:{card:"購入した商品-取引中"}
+                = render partial:'top/header_usermenu_card', locals:{card:"出品した商品-過去の取引"}
