エラー修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,5 +17,5 @@
 @import "signup";
 @import "mypage_card";
 @import "./top/search_category";
-@import "./users/status"
-@import "./products/search";
+@import "./users/status";
+@import "./products/search"¥
