画像にリンクを貼る
商品一覧ページの商品画像に商品詳細ページへのリンクを貼りました。

--- a/app/views/products/_item.html.haml
+++ b/app/views/products/_item.html.haml
@@ -1,5 +1,4 @@
-.contents__item__box
-  - 
+= link_to product_path(product.id), class:"contents__item__box" do
   .contents__item__box__image
     -if product.images.attached?
       = image_tag product.images[0]
