パンくず　マイページのみ

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -418,3 +418,11 @@
     }
   }
 }
+.bread-crumbs{
+  border-top: 1px solid #eee;
+  .breadcrumbs{
+    margin: 0 auto;
+    padding: 16px 0;
+    width: 1020px;
+  }
+}
