--- a/app/views/top/_header.html.haml
+++ b/app/views/top/_header.html.haml
@@ -80,3 +80,5 @@
               = render partial:'top/header_usermenu_card', locals:{card:"出品した商品-売却済"}
               = render partial:'top/header_usermenu_card', locals:{card:"購入した商品-取引中"}
               = render partial:'top/header_usermenu_card', locals:{card:"出品した商品-過去の取引"}
+%nav.bread-crumbs
+  = render "devise/shared/breadcrumbs"
