--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,4 +18,4 @@
 @import "mypage_card";
 @import "./top/search_category";
 @import "./users/status";
-@import "./products/search"¥
+@import "./products/search";
