--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -116,6 +116,11 @@ legend {
 
 a,
 a:after{
+    font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
     text-decoration: none;
     color: black;
+}
+
+button{
+    cursor: pointer;
 }
