--- a/app/assets/stylesheets/common_layout/form.scss
+++ b/app/assets/stylesheets/common_layout/form.scss
@@ -144,7 +144,8 @@
         color: #888;    
       }
       h2{
-        margin-left: 8px;
+        font-size: 14px;
+        margin: 0 4px;
         line-height: 3;
       }
     }
