パンくず、マイページ、カテゴリーレベル１のみ実装

--- a/app/views/devise/shared/_breadcrumbs.html.haml
+++ b/app/views/devise/shared/_breadcrumbs.html.haml
@@ -3,7 +3,7 @@
 - when ['users', 'index']
   - breadcrumb :mypage
 
-- when ['user_chat_rooms', 'index']
-  - breadcrumb :user_chat_rooms_index
+- when ['top', 'show']
+  - breadcrumb :top
 
 = breadcrumbs separator: " &nbsp; &nbsp;&#12297;&nbsp; "
