パンくず、カテゴリーレベル２、３実装

--- a/app/views/devise/shared/_breadcrumbs.html.haml
+++ b/app/views/devise/shared/_breadcrumbs.html.haml
@@ -4,6 +4,8 @@
   - breadcrumb :mypage
 
 - when ['top', 'show']
-  - breadcrumb :top
+  - breadcrumb :top1
+  - breadcrumb :top2
+  - breadcrumb :top3
 
 = breadcrumbs separator: " &nbsp; &nbsp;&#12297;&nbsp; "
