エラー修正

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -12,7 +12,7 @@
                 = image_tag image, alt: '', height: 'auto', width: '270px'
         %ul.item-detail__image__thumbnails
           -if @product.images.attached?
-            -@product.images.each do |image|
+            -@product.images.all.order(id: "ASC").each do |image|
               %li.item-detail__image__thumbnail
                 = image_tag image, alt: '', height: '60px', width: '60px'
       .item-detail__table
