パンくずリストユーザー完了

--- a/app/views/devise/shared/_breadcrumbs.html.haml
+++ b/app/views/devise/shared/_breadcrumbs.html.haml
@@ -3,6 +3,33 @@
 - when ['users', 'index']
   - breadcrumb :mypage
 
+- when ['users', 'show']
+  - breadcrumb :mypage
+
+- when ['mypage_card', 'index']
+  - breadcrumb :mypage
+  - breadcrumb :mypage_card
+
+- when ['mypage_card', 'new']
+  - breadcrumb :mypage
+  - breadcrumb :credit_card_information
+
+- when ['user_profile', 'new']
+  - breadcrumb :mypage
+  - breadcrumb :profile
+
+- when ['user_profile', 'new']
+  - breadcrumb :mypage
+  - breadcrumb :profile
+
+- when ['user_identifications', 'new']
+  - breadcrumb :mypage
+  - breadcrumb :person_info_registration
+
+- when ['user_profile', 'edit']
+  - breadcrumb :mypage
+  - breadcrumb :logout
+  
 - when ['top', 'show']
   - breadcrumb :top1
   - breadcrumb :top2
