--- a/app/views/shared/_confirm-product.html.haml
+++ b/app/views/shared/_confirm-product.html.haml
@@ -37,5 +37,5 @@
           ************#{@last4} 
           %br #{@month} / #{@year}
         .user-info__main__card
-          = image_tag '#{@brand}.svg', width: '100%'
+          = image_tag @brand+'.svg', width: '100%'
         %a.user-info__main__fix 変更する
